--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,9 @@
 
 
 .App {
-  padding-left: 500px;
-  padding-top: 130px;
-  padding-bottom: 200px;
+  padding-left: 20%;
+  padding-top: 6%;
+  padding-bottom: 10%;
   text-align: left;
   background-color: #5ca0f2;
   background-image: linear-gradient(315deg, #5ca0f2 0%, #f5f7f6 74%);
@@ -28,25 +28,25 @@
 .content {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 4%;
 }
 
 
 .Headshot {
  
-  margin-top: 130px;
+  margin-top: 7%;
   border-radius: 0%;  
-  width: 300px;
-  margin-left: 250px;
+  width: 19rem;
+  margin-left: 13%;
   box-shadow: 5px 5px 5px 5px rgba(3, 95, 255, 0.628); 
   border-radius: 20%;
 }
 
 
 .projects {
-  width: 900px;
+  width: 54rem;
   border-radius: 5%;
-  margin-right: 100px;
+  margin-right: 3%;
   box-shadow: 10px 5px 5px rgba(103, 103, 103, 0.663);
 }
 .toplink{
@@ -92,7 +92,7 @@ table {
 }
 
 th, td {
-  padding: 10px;
+  padding: 0.8rem;
   border: 1px solid #ddd;
   font-size: large;
   font-weight: bold;
