--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,3 +105,121 @@ th {
   font-size: .6rem;
   font-weight: bold;
 }
+
+@media all and (max-width:400px){
+  .App {
+    padding-left: 8%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    text-align: left;
+    background-color: #5ca0f2;
+    background-image: linear-gradient(315deg, #5ca0f2 0%, #f5f7f6 74%);
+    background-size: full-width;
+  }
+  .navbar {
+    /* background-color: #5ca0f2; */
+    color: rgb(99, 138, 255);
+    width: auto;
+    height: 5%;
+    font-size: 16px;
+    text-decoration: none; /* Remove underline */
+  }
+  .portfolio {
+    color: rgb(99, 138, 255);
+    font-size: 16px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.663);
+    width: fit-content;
+  }
+  .Music-Depo{
+    font-size:bold ;
+  }
+  
+  .content {
+    flex-direction: column;
+    align-items: flex-start;
+    display: flex;
+    gap: 4%;
+  }
+
+    
+  .Headshot { 
+    width: 100px;
+    margin-left: 65%;
+    margin-bottom: 0%;
+    box-shadow: 5px 5px 5px 5px rgba(3, 95, 255, 0.628); 
+    border-radius: 20%;
+  }
+
+  .content .Headshot {
+    flex-direction: flex; /* Reset the margin-top value */
+    margin-top: 0;
+  }
+  
+  
+  .projects {
+    width: 260px;
+    border-radius: 5%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    box-shadow: 10px 5px 5px rgba(103, 103, 103, 0.663);
+  }
+  .toplink{
+    color: rgb(99, 138, 255);
+    text-decoration: none; 
+  }
+  .toplink:hover {
+    color: rgb(13, 48, 155);
+    transition: color 1ms;
+  }
+  
+  h2 {
+    align-self: flex-start;
+    font-size: 15px;
+    text-shadow: 1px 1px 1px rgb(255, 255, 255);
+    margin-bottom: 30px;
+  }
+  
+  h3 {
+    align-self: flex-start;
+    margin-top: 3%; 
+    font-size: 12px;
+    color: rgb(4, 0, 119);
+    width: 200px;
+  }
+  
+  a {
+    font-size: 14px; 
+    color: rgb(255, 255, 255);
+    text-decoration: none; 
+    
+  }
+  
+  a:hover {
+    color: rgb(13, 48, 155);
+    transition: color 1ms;
+  }
+  
+  
+  table {
+    margin-top: 10%;
+    border-collapse: collapse;
+    width: 95%;
+    font-size: large;
+    box-shadow: 2px 2px 2px 2px rgba(3, 95, 255, 0.628);
+  }
+  
+  th, td {
+    
+    border: 0.8px solid #ddd;
+    font-size: 10px;
+    font-weight: bold;
+  }
+  
+  th {
+    background-color: #ededede6;
+    text-align: center;
+    font-size: 8px;
+    font-weight: bold;
+  }
+
+}
