--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,7 @@
   margin-left: 14%;
   box-shadow: 5px 5px 5px 5px rgba(3, 95, 255, 0.628); 
   border-radius: 20%;
+  animation: flameGlow 2.5s ease-in-out infinite alternate;
 }
 
 
@@ -50,6 +51,7 @@
   border-radius: 5%;
   margin-right: 3%;
   box-shadow: 10px 5px 5px rgba(103, 103, 103, 0.663);
+  animation: flameGlow 2.5s ease-in-out infinite alternate;
 }
 .toplink{
   color: rgb(99, 138, 255);
@@ -101,8 +103,23 @@ table {
   border-collapse: collapse;
   width: 80%;
   font-size: large;
-  box-shadow: 2px 2px 2px 2px rgba(3, 95, 255, 0.628);
+  animation: flameGlow 2.5s ease-in-out infinite alternate;
+  background: #f5f7f6;
+  
 }
+
+@keyframes flameGlow {
+  0% {
+    box-shadow: 0 0 10px #5ca0f2;
+  }
+  50% {
+    box-shadow: 0 0 30px #ffffff;
+  }
+  100% {
+    box-shadow: 0 0 30px #5ca0f2;
+  }
+}
+
 
 th, td {
   padding: 0.55em;
@@ -162,6 +179,7 @@ th {
     margin-bottom: 0%;
     box-shadow: 5px 5px 5px 5px rgba(3, 95, 255, 0.628); 
     border-radius: 20%;
+    animation: flameGlow 2.5s ease-in-out infinite alternate;
   }
 
   .content .Headshot {
@@ -176,6 +194,7 @@ th {
     margin-right: 3%;
     margin-bottom: 3%;
     box-shadow: 10px 5px 5px rgba(103, 103, 103, 0.663);
+    animation: flameGlow 2.5s ease-in-out infinite alternate;
   }
   .toplink{
     color: rgb(99, 138, 255);
@@ -231,6 +250,18 @@ th {
     width: 95%;
     font-size: large;
     box-shadow: 2px 2px 2px 2px rgba(3, 95, 255, 0.628);
+    animation: flameGlow 2.5s ease-in-out infinite alternate;
+  }
+  @keyframes flameGlow {
+    0% {
+      box-shadow: 0 0 10px #5ca0f2;
+    }
+    50% {
+      box-shadow: 0 0 30px #ffffff;
+    }
+    100% {
+      box-shadow: 0 0 30px #5ca0f2;
+    }
   }
   
   th, td {
