--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,7 +72,16 @@
   display: inline-block;
   animation: rotate 5s linear infinite;
   
-   
+}
+
+h1{
+  background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW10N3YxaDVrNWQwNTlkb2tzdWlwbW9ocHlxc2d2cGkxanE0NHc3diZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3bc8pP1rVdfgN1uoMV/giphy-downsized-large.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  margin: 10px 0;
 }
 
 h2 {
@@ -144,6 +153,7 @@ th {
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
 }
+
 
 .inputfield {
   margin-left: 17px;
